--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
         <div class="calculator">
             <div class="calculator__display">0</div>
             <div class="calculator__keys">
-                <button class="operator plus">+</button>
-                <button class="operator minus">-</button>
-                <button class="operator times">&times;</button>
-                <button class="operator divide">÷</button>
-                <button class="number one">1</button>
-                <button class="number two">2</button>
-                <button class="number three">3</button>
-                <button class="number four">4</button>
-                <button class="number five">5</button>
-                <button class="number six">6</button>
-                <button class="number seven">7</button>
-                <button class="number eight">8</button>
-                <button class="number nine">9</button>
-                <button class="number zero">0</button>
-                <button class="number decimal">.</button>
-                <button class="number clear">C</button>
+                <button data-type="operator" class="plus">+</button>
+                <button data-type="operator" class="minus">-</button>
+                <button data-type="operator" class="times">&times;</button>
+                <button data-type="operator" class="divide">÷</button>
+                <button data-type="number" class="one">1</button>
+                <button data-type="number" class="two">2</button>
+                <button data-type="number" class="three">3</button>
+                <button data-type="number" class="four">4</button>
+                <button data-type="number" class="five">5</button>
+                <button data-type="number" class="six">6</button>
+                <button data-type="number" class="seven">7</button>
+                <button data-type="number" class="eight">8</button>
+                <button data-type="number" class="nine">9</button>
+                <button data-type="number" class="zero">0</button>
+                <button data-type="number" class="decimal">.</button>
+                <button data-type="number" class="clear">C</button>
                 <button class="equal">=</button>
             </div>
         </div>
