--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="calculator">
             <div class="calculator__display">0</div>
             <div class="calculator__keys">
-                <button data-type="operator" class="plus">+</button>
-                <button data-type="operator" class="minus">-</button>
-                <button data-type="operator" class="times">&times;</button>
-                <button data-type="operator" class="divide">÷</button>
+                <button data-type="operator" data-key="plus">+</button>
+                <button data-type="operator" data-key="minus">-</button>
+                <button data-type="operator" data-key="times">&times;</button>
+                <button data-type="operator" data-key="divide">÷</button>
                 <button data-type="number" class="one">1</button>
                 <button data-type="number" class="two">2</button>
                 <button data-type="number" class="three">3</button>
@@ -35,7 +35,7 @@
                 <button data-type="number" class="zero">0</button>
                 <button data-type="number" class="decimal">.</button>
                 <button data-type="number" class="clear">C</button>
-                <button class="equal">=</button>
+                <button data-type="equal" class="equal">=</button>
             </div>
         </div>
     </div>
